@@ -105,7 +105,13 @@ class SimpleCCMImpl {
 
         this.options = options;
         this.comms = {};
-        this.limiters = {};
+        this.limiters = {
+            unlimited: {
+                sync( as, a, b ) {
+                    as.add( a, b );
+                },
+            },
+        };
     }
 
     onRegister( as, info ) {
